Loaded data from two source files

--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -52,11 +52,312 @@
     "\n",
     "Submit your work in a well-organized GitHub repo, where the code is appropriately commented and all members of the group have made significant contributions to the commit history. (10/100 pts)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d336aea1",
+   "metadata": {},
+   "source": [
+    "Submission: Day 1 - "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "fb4fb1ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mortality file: (9965, 8)\n",
+      "   SEQN  ELIGSTAT  MORTSTAT  UCOD_LEADING  DIABETES  HYPERTEN  PERMTH_INT  \\\n",
+      "0     1         2       NaN           NaN       NaN       NaN         NaN   \n",
+      "1     2         1       1.0           6.0       0.0       0.0       177.0   \n",
+      "2     3         2       NaN           NaN       NaN       NaN         NaN   \n",
+      "3     4         2       NaN           NaN       NaN       NaN         NaN   \n",
+      "4     5         1       0.0           NaN       NaN       NaN       244.0   \n",
+      "\n",
+      "   PERMTH_EXM  \n",
+      "0         NaN  \n",
+      "1       177.0  \n",
+      "2         NaN  \n",
+      "3         NaN  \n",
+      "4       244.0  \n",
+      "Demo file: (9965, 144)\n",
+      "   SEQN  SDDSRVYR  RIDSTATR  RIDEXMON  RIAGENDR  RIDAGEYR  RIDAGEMN  RIDAGEEX  \\\n",
+      "0   1.0       1.0       2.0       2.0       2.0       2.0      29.0      31.0   \n",
+      "1   2.0       1.0       2.0       2.0       1.0      77.0     926.0     926.0   \n",
+      "2   3.0       1.0       2.0       1.0       2.0      10.0     125.0     126.0   \n",
+      "3   4.0       1.0       2.0       2.0       1.0       1.0      22.0      23.0   \n",
+      "4   5.0       1.0       2.0       2.0       1.0      49.0     597.0     597.0   \n",
+      "\n",
+      "   RIDRETH1  RIDRETH2  ...      WTIREP43      WTIREP44      WTIREP45  \\\n",
+      "0       4.0       2.0  ...  10094.017100   9912.461855   9727.078709   \n",
+      "1       3.0       1.0  ...  27186.728682  27324.345051  28099.663528   \n",
+      "2       3.0       1.0  ...  43993.193099  44075.386428  46642.563799   \n",
+      "3       4.0       2.0  ...  10702.307249  10531.444441  10346.119327   \n",
+      "4       3.0       1.0  ...  93164.782430  92119.608772  95388.490406   \n",
+      "\n",
+      "       WTIREP46      WTIREP47      WTIREP48      WTIREP49      WTIREP50  \\\n",
+      "0  10041.524113  9.953956e+03   9857.381983   9865.152486  10327.992682   \n",
+      "1  27757.066921  2.804929e+04  26716.602006  26877.704909  27268.025234   \n",
+      "2  44967.681579  4.457248e+04  44087.945688  44831.370881  44480.987235   \n",
+      "3  10636.063039  5.397605e-79  10533.108939  10654.749584  10851.024385   \n",
+      "4  94131.383538  9.529781e+04  91325.082461  91640.586117  92817.926915   \n",
+      "\n",
+      "       WTIREP51      WTIREP52  \n",
+      "0   9809.165049  10323.315747  \n",
+      "1  27406.383620  26984.812909  \n",
+      "2  45389.112766  43781.905637  \n",
+      "3  10564.981435  11012.529729  \n",
+      "4  94282.855382  91993.251203  \n",
+      "\n",
+      "[5 rows x 144 columns]\n",
+      "Merged: (9965, 151)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>SEQN</th>\n",
+       "      <th>SDDSRVYR</th>\n",
+       "      <th>RIDSTATR</th>\n",
+       "      <th>RIDEXMON</th>\n",
+       "      <th>RIAGENDR</th>\n",
+       "      <th>RIDAGEYR</th>\n",
+       "      <th>RIDAGEMN</th>\n",
+       "      <th>RIDAGEEX</th>\n",
+       "      <th>RIDRETH1</th>\n",
+       "      <th>RIDRETH2</th>\n",
+       "      <th>...</th>\n",
+       "      <th>WTIREP50</th>\n",
+       "      <th>WTIREP51</th>\n",
+       "      <th>WTIREP52</th>\n",
+       "      <th>ELIGSTAT</th>\n",
+       "      <th>MORTSTAT</th>\n",
+       "      <th>UCOD_LEADING</th>\n",
+       "      <th>DIABETES</th>\n",
+       "      <th>HYPERTEN</th>\n",
+       "      <th>PERMTH_INT</th>\n",
+       "      <th>PERMTH_EXM</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>29.0</td>\n",
+       "      <td>31.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10327.992682</td>\n",
+       "      <td>9809.165049</td>\n",
+       "      <td>10323.315747</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>77.0</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>926.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>27268.025234</td>\n",
+       "      <td>27406.383620</td>\n",
+       "      <td>26984.812909</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>6.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>177.0</td>\n",
+       "      <td>177.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>125.0</td>\n",
+       "      <td>126.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>44480.987235</td>\n",
+       "      <td>45389.112766</td>\n",
+       "      <td>43781.905637</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>4.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>10851.024385</td>\n",
+       "      <td>10564.981435</td>\n",
+       "      <td>11012.529729</td>\n",
+       "      <td>2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>49.0</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>597.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>92817.926915</td>\n",
+       "      <td>94282.855382</td>\n",
+       "      <td>91993.251203</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>244.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 151 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   SEQN  SDDSRVYR  RIDSTATR  RIDEXMON  RIAGENDR  RIDAGEYR  RIDAGEMN  RIDAGEEX  \\\n",
+       "0   1.0       1.0       2.0       2.0       2.0       2.0      29.0      31.0   \n",
+       "1   2.0       1.0       2.0       2.0       1.0      77.0     926.0     926.0   \n",
+       "2   3.0       1.0       2.0       1.0       2.0      10.0     125.0     126.0   \n",
+       "3   4.0       1.0       2.0       2.0       1.0       1.0      22.0      23.0   \n",
+       "4   5.0       1.0       2.0       2.0       1.0      49.0     597.0     597.0   \n",
+       "\n",
+       "   RIDRETH1  RIDRETH2  ...      WTIREP50      WTIREP51      WTIREP52  \\\n",
+       "0       4.0       2.0  ...  10327.992682   9809.165049  10323.315747   \n",
+       "1       3.0       1.0  ...  27268.025234  27406.383620  26984.812909   \n",
+       "2       3.0       1.0  ...  44480.987235  45389.112766  43781.905637   \n",
+       "3       4.0       2.0  ...  10851.024385  10564.981435  11012.529729   \n",
+       "4       3.0       1.0  ...  92817.926915  94282.855382  91993.251203   \n",
+       "\n",
+       "   ELIGSTAT  MORTSTAT  UCOD_LEADING  DIABETES  HYPERTEN  PERMTH_INT  \\\n",
+       "0         2       NaN           NaN       NaN       NaN         NaN   \n",
+       "1         1       1.0           6.0       0.0       0.0       177.0   \n",
+       "2         2       NaN           NaN       NaN       NaN         NaN   \n",
+       "3         2       NaN           NaN       NaN       NaN         NaN   \n",
+       "4         1       0.0           NaN       NaN       NaN       244.0   \n",
+       "\n",
+       "   PERMTH_EXM  \n",
+       "0         NaN  \n",
+       "1       177.0  \n",
+       "2         NaN  \n",
+       "3         NaN  \n",
+       "4       244.0  \n",
+       "\n",
+       "[5 rows x 151 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "# Load linked mortality file and the DEMO.xpt file\n",
+    "mdf = pd.read_csv(\"data/linked_mortality_file_1999_2000.csv\")\n",
+    "print(\"Mortality file:\", mdf.shape)\n",
+    "print(mdf.head())\n",
+    "gdf = pd.read_sas(\"data/DEMO.xpt\", format=\"xport\")\n",
+    "print(\"Demo file:\", gdf.shape)\n",
+    "print(gdf.head())\n",
+    "# Merge\n",
+    "df = gdf.merge(mdf, on=\"SEQN\", how=\"inner\")\n",
+    "print(\"Merged:\", df.shape)\n",
+    "df.head()"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "pysparkenv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
