Added md for header

--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -58,7 +58,7 @@
    "id": "d336aea1",
    "metadata": {},
    "source": [
-    "Submission: Day 1 - "
+    "Submission: Day 1 - First we begin with loading the two datasets (DEMO.xpt and linked_mortality_file_1999_2000.csv)"
    ]
   },
   {
