finished writing documentation of 4 columns

--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "fb4fb1ab",
    "metadata": {},
    "outputs": [
@@ -320,7 +320,7 @@
        "[5 rows x 151 columns]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -339,6 +339,54 @@
     "print(\"Merged:\", df.shape)\n",
     "df.head()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7081ffe8",
+   "metadata": {},
+   "source": [
+    "1. `ELIGSTAT`:This variable tells you whether a survey participant was eligible to be linked to mortality (death) records in the National Death Index (NDI):\n",
+    "\n",
+    "1 = Eligible: The participant had sufficient identifying information to be linked to death records.\n",
+    "\n",
+    "2 = Under age 18 (not released): The participant was under age 18 and thus not included in the public-use mortality linkage.\n",
+    "\n",
+    "3 = Ineligible: The participant did not have enough identifying information to perform the mortality linkage.\n",
+    "\n",
+    "Participants with values 2 or 3 won’t have mortality follow-up data in the public-use file, because they either were too young or lacked required linkage info.\n",
+    "\n",
+    "2. `MORTSTAT` :This variable indicates the vital status of a participant (whether they are counted as alive or deceased) after linkage to mortality data:\n",
+    "\n",
+    "0 = Assumed alive: The participant was eligible for linkage and was not found to be deceased in the linked mortality data.\n",
+    "\n",
+    "1 = Assumed deceased: The participant was eligible and a match to a death record was found.\n",
+    "\n",
+    "Blank/missing: Not eligible for linkage (e.g., too young or insufficient records).\n",
+    "\n",
+    "This is typically the main outcome variable used in mortality studies\n",
+    "\n",
+    "3. `PERMTH_INT`: This variable measures the total number of months the participant was followed for mortality outcomes starting from the survey interview date until:\n",
+    "\n",
+    "the date of death, if deceased; or\n",
+    "\n",
+    "the end of the mortality follow-up period (e.g., Dec 31, 2019 for public-use linked data).\n",
+    "\n",
+    "It provides follow-up time in months (e.g., 0–374 months depending on survey year). If the participant was assumed alive at the end of the follow-up period, this equals the time from interview through that period’s end.\n",
+    "\n",
+    "4. `RIDAGEEX` : This is an age variable from the underlying survey, specifically:\n",
+    "\n",
+    "it represents the age of the respondent at the time of their NHANES examination (usually in years).\n",
+    "\n",
+    "Researchers often use it to define age groups or as a predictor/covariate in mortality analysis (e.g., older vs. younger participants)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8d3e59e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -357,7 +405,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.12"
   }
  },
  "nbformat": 4,
