Finished adding Smoking and Drug Use to out dataset

--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -382,11 +382,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "e8d3e59e",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Smoking file: (4880, 39)\n",
+      "Drug Use file: (2838, 5)\n",
+      "Final merged dataset: (9965, 277)\n"
+     ]
+    }
+   ],
+   "source": [
+    "smq = pd.read_sas(\"data/SMQ.xpt\", format=\"xport\")\n",
+    "print(\"Smoking file:\", smq.shape)\n",
+    "\n",
+    "duq = pd.read_sas(\"data/DUQ.xpt\", format=\"xport\")\n",
+    "print(\"Drug Use file:\", duq.shape)\n",
+    "\n",
+    "df = df.merge(smq, on=\"SEQN\", how=\"left\")\n",
+    "df = df.merge(duq, on=\"SEQN\", how=\"left\")\n",
+    "\n",
+    "print(\"Final merged dataset:\", df.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "63a67b2d",
+   "metadata": {},
+   "source": [
+    "1. We chose Drug Use and Smoking because we wanted to see how much these impact mortality rates and life expectancy."
+   ]
   }
  ],
  "metadata": {
