added next header

--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -1579,6 +1579,20 @@
     "\n",
     "Initial analysis indicates that smoking, or at least smoking excessively, is correlated with mortality."
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59465d34",
+   "metadata": {},
+   "source": [
+    "### Submission Day 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a5220e3e",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
