edited variable descriptions

--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -449,17 +449,7 @@
    "source": [
     "We chose Drug Use and Smoking because we wanted to see how much these impact mortality rates and life expectancy.\n",
     "\n",
-    "1. `DUQ100`: Ever used cocaine or other street drugs, not including marijuana:\n",
-    "   \n",
-    "   1 = Yes\n",
-    "   \n",
-    "   2 = No\n",
-    "\n",
-    "   7 = Refused\n",
-    "\n",
-    "   9 = Don't know\n",
-    "\n",
-    "2. `SMQ020`: Smoked at least 100 cigarettes in life\n",
+    "1. `DUQ100` (renamed to `used_street_drug`): Ever used cocaine or other street drugs, not including marijuana:\n",
     "   \n",
     "   1 = Yes\n",
     "\n",
@@ -469,7 +459,7 @@
     "\n",
     "   9 = Don't know\n",
     "\n",
-    "3. `SMQ150`: Smoked cigars at least 20 times in life\n",
+    "2. `SMQ020` (renamed to `smoked_cigarettes`): Smoked at least 100 cigarettes in life\n",
     "   \n",
     "   1 = Yes\n",
     "\n",
@@ -479,7 +469,17 @@
     "\n",
     "   9 = Don't know\n",
     "\n",
-    "4. `SMQ210`: Used chewing tobacco at least 20 times in life\n",
+    "3. `SMQ150` (renamed to `smoked_cigars`): Smoked cigars at least 20 times in life\n",
+    "   \n",
+    "   1 = Yes\n",
+    "\n",
+    "   2 = No\n",
+    "\n",
+    "   7 = Refused\n",
+    "\n",
+    "   9 = Don't know\n",
+    "\n",
+    "4. `SMQ210` (renamed to `used_chewing_tobacco`): Used chewing tobacco at least 20 times in life\n",
     "   \n",
     "   1 = Yes\n",
     "\n",
@@ -1072,7 +1072,7 @@
    "id": "48864018",
    "metadata": {},
    "source": [
-    "From the drug use dataset `DUQ`, we used the feature `DUQ100`, renamed as `used_street_drug`.\n",
+    "From the drug use dataset `DUQ`, we used the feature `DUQ100`, cleaned and renamed as `used_street_drug`.\n",
     "\n",
     "`DUQ100` was converted from float to string."
    ]
@@ -1240,7 +1240,7 @@
    "id": "cc2abdb4",
    "metadata": {},
    "source": [
-    "From the smoking dataset `SMQ`, we used the features `SMQ020`, `SMQ150`, and `SMQ210` renamed as `smoked_cigarettes`, `smoked_cigars`, and `used_chewing_tobacco` respectively.\n",
+    "From the smoking dataset `SMQ`, we used the features `SMQ020`, `SMQ150`, and `SMQ210`, cleaned and renamed as `smoked_cigarettes`, `smoked_cigars`, and `used_chewing_tobacco` respectively.\n",
     "\n",
     "All were converted from float to string."
    ]
