--- a/project_1_bsds.ipynb
+++ b/project_1_bsds.ipynb
@@ -1682,6 +1682,20 @@
         "\n",
         "This analysis has several potential limitations. First, mortality outcomes are only available for participants who are eligible for linkage (ELIGSTAT = 1), so the models are trained on a restricted subset and may not be generalize to everyone in the survey. Secondly, several predictors  can be self-reported, so measurement error and underreporting can weaken model accuracy. Finally, these models capture correlations, not causation. So it is possible that differences in predicted mortality risk may reflect socioeconomic factors and access to care, rather than biological effects."
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Question 2:**\n",
+        "\n",
+        "The variables we used to predict mortality and life expectancy include: age(CLEANED_AGE), drug use(used_street_drug), and smoking indicators( smoked_cigarettes, smoked_cigars, and used_chewing_tobacco).\n",
+        "\n",
+        "We selected age because it is the strongest baseline driver of mortality risk and survival time: all else equal, older individuals have had more time to accumulate chronic disease and are closer to the end of life. We selected smoking variables because cigarette, cigar, and chewing tobacco use capture long-run exposure to harmful substances. For example carcinogens may lead to  cardiovascular risks. Therefore smoking variables should be associated with higher mortality risk and shorter follow-up. We selected drug use because it proxies risky behavior and potential long-run health harms that can increase the probability of death and reduce survival time. Together, these variables give a simple but plausible set of predictors that combine a strong biological baseline factor (age) with behavioral risk factors (tobacco and drug use) that are clinically and epidemiologically linked to mortality outcomes."
+      ],
+      "metadata": {
+        "id": "S8zi_pSYf3cT"
+      },
+      "id": "S8zi_pSYf3cT"
     }
   ],
   "metadata": {
